# ms-user-candidate

./: .dev.env  .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn_conf.py  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/controllers/controller/: auth_controller.py  candidate_controller.py  deps.py  enums.py  health_controller.py  schemas.py  user_controller.py
app/utils/: log_helper.py  utils.py
core/: extensions.py  factories.py
core/settings/: devsettings.py  prodsettings.py  settings.py
